<resources>
    <string name="app_name">DayGuess</string>
    <string name="score">SCORE:</string>
    <string name="text_view">text view</string>
    <string name="textview">TextView</string>
    <string name="guess_the_day_of">GUESS THE DAY OF:</string>
    <string name="option4">option4</string>
    <string name="option3">option3</string>
    <string name="option2">option2</string>
    <string name="option1">option1</string>
    <string name="start">START</string>
</resources>