<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textscore"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/score"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@id/textscore"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="-60dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@id/score"
        android:layout_marginBottom="-59dp"
        android:gravity="center"
        android:text="@string/guess_the_day_of"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-81dp"
        android:gravity="center"
        android:text="@string/text_view"
        android:textSize="24sp" />

    <Button
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/question"
        android:layout_marginBottom="-193dp"
        android:text="@string/option1" />

    <Button
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/option1"
        android:layout_marginBottom="-64dp"
        android:text="@string/option2" />

    <Button
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/option2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-62dp"
        android:text="@string/option3" />

    <Button
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/option3"
        android:layout_marginBottom="-57dp"
        android:text="@string/option4" />


</RelativeLayout>